--- a/views/customerList.ejs
+++ b/views/customerList.ejs
@@ -2,18 +2,19 @@
 <html>
 <head>
     <title>客户中心</title>
-    <link rel='stylesheet' href='/stylesheets/customelist.css' />
+    <link rel='stylesheet' href='../stylesheets/customelist.css' />
+    <meta name="viewport" content="inital-scale=1.0,maximum-scale=1.0,user-scalable=no;">
 </head>
 <body>
 <div class="search-title">
-    <div class="search-title-date" style="width: 45%;">
-        <img src="../images/date-icon.png" class="search-title-img">
-        <input type="date" class="search-title-date-input"></input>
+    <div class="search-title-date" style="width: 45%;text-align: center;">
+      <!--  <img src="../images/date-icon.png" class="search-title-img">-->
+        <input type="date" class="search-title-date-input"/>
     </div>
     <div class="search-title-mid">至</div>
-    <div class="search-title-date" style="width: 42%;">
-        <img src="../images/date-icon.png" class="search-title-img">
-        <input type="date" class="search-title-date-input"></input>
+    <div class="search-title-date" style="width: 42%; text-align: center;">
+       <!-- <img src="../images/date-icon.png" class="search-title-img">-->
+        <input type="date" class="search-title-date-input"/>
     </div>
 </div>
 <div class="search-body" style="margin: 10px;">
