--- a/public/stylesheets/customelist.css
+++ b/public/stylesheets/customelist.css
@@ -9,5 +9,5 @@
 .search-title-mid{width: 10%;display: inline-block; text-align: center;font-size:28px;color:#999999;}
 .search-title-img{width: 48px; height: 48px;position: absolute; left: 18px;top:7px;}
 
-
+.no-bind div{line-height: 80px;font-size: 40px;text-align: center;}
 body{margin: 0px;}
