--- a/views/customerList.ejs
+++ b/views/customerList.ejs
@@ -55,7 +55,7 @@
         </div>
          <div style="display: inline-block;width: 85%;" dataid='<%=data.id%>' onclick="navtodeail(this)">
              <div class="search-body-font">
-                 <%=data.name%>
+                 <%=data.wxNickname%>&nbsp;<span style="font-size: 28px; font-weight: normal;"><%=data.name.length>1?'('+data.name+')':''%></span>
              </div>
              <div class="search-body-right" style="<%=data.DataStatus?'':'color:#333;'%>">
                  <span style="line-height:100px;" > <%=data.DataStatus?"不完整  >":">"%></span>
@@ -73,12 +73,25 @@
 <%}%>
 <script type="application/javascript">
     function navtodeail(thisobj) {
-        window.location.href = "./detail?id="+thisobj.getAttribute('dataid');
+        var startDate = document.getElementById('startDate').value;
+        var endDate = document.getElementById('endDate').value;
+        window.location.href = "./detail?id="+thisobj.getAttribute('dataid')+"&Date="+startDate+"_"+endDate;;
     }
 
     function changedata(thisobj) {
         var startDate = document.getElementById('startDate').value;
         var endDate = document.getElementById('endDate').value;
+
+        if(new Date(startDate)>new Date(endDate)){
+            alert('开始日期不能大于结束日期')
+
+            let _toDay = new Date();
+            let _sevenDay =   new Date(_toDay.getTime() - (6 * 24 * 60 * 60 * 1000));
+            endDate = _toDay.getFullYear()+"-"+(_toDay.getMonth()+1)+"-"+_toDay.getDate();
+            startDate = _sevenDay.getFullYear()+"-"+(_sevenDay.getMonth()+1)+"-"+_sevenDay.getDate();
+
+        }
+
         window.location.href = "./list?Date="+startDate+"_"+endDate;
     }
 </script>
